# dev-desktop

./: Cargo.toml  md-symbol-white@2x.png~  style.css
.github/workflows/: release.yml
commands/: Cargo.toml
commands/src/: lib.rs
src/: app.rs
src-tauri/: Cargo.toml  build.rs  schema.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  macos.rs  main.rs  spring.rs  tunnel.rs
