[package]
edition = "2021"
name = "dev-desktop-ui"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.57"
chrono = "0.4.22"
chrono-humanize = "0.2.2"
commands = {version = "0.1.0", path = "commands"}
gloo-timers = "0.2.4"
js-sys = "0.3.59"
serde = {version = "1.0.140", features = ["derive"]}
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = {version = "0.2.82", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = "0.19"
yew-hooks = "0.1.56"

[workspace]
members = ["src-tauri", "commands"]

[patch.crates-io]
containers-api = {path = "../containers-api"}
podman-api = {path = "../podman-api-rs"}
