[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "developer-dashboard"
repository = ""
rust-version = "1.57"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.1", features = [] }

[dependencies]
cocoa = {version = "0.24.0", optional = true}
commands = {version = "0.1.0", path = "../commands"}
directories = "4.0.1"
podman-api = "0.7.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.13"
tauri = {version = "1.1", features = ["api-all", "cli"] }
tokio = {version = "1.21.1", features = ["process", "macros", "rt"] }
tokio-util = "0.7.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
